Added icon. Responsive style. OG image.

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,18 +1,41 @@
 $font: 'Open Sans', sans-serif;
 $font-color: rgba(10,10,10,1);
 $headline-font: 'Roboto Slab', serif;
+$breakpoint-mobile: 720px;
+
+html {
+  height: 100%;
+}
 
 body {
 	background-color: white;
   font-family: $font;
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  height: 100%;
+}
+
+#bike {
+  position: fixed;
+  width: 66%;
+  opacity: 0.2;
+  bottom: -33%;
+  left: 52%;
+  margin-left: -33%;
+  @media screen and (max-width: $breakpoint-mobile) {
+    display: none;
+  }
 }
 
 .app {
     width: 70%;
     margin: auto;
     margin-top: 2rem;
+    @media screen and (max-width: $breakpoint-mobile) {
+      width: 95%;
+      margin-top: 5rem;
+    }
 }
 
 h1 {
@@ -23,6 +46,9 @@ h1 {
   margin: 0;
   padding: 0;
   line-height: 3.9rem;
+  @media screen and (max-width: $breakpoint-mobile) {
+      font-size: 2rem;
+  }
 }
 
 h2 {
@@ -33,6 +59,9 @@ h2 {
   margin: 0 0 2rem 0;
   padding: 0;
   font-size: 1.6rem;
+  @media screen and (max-width: $breakpoint-mobile) {
+      font-size: 1rem;
+  }
 }
 
 input {
@@ -44,11 +73,16 @@ input {
   width: 100%;
   outline: none;
   padding: 1rem;
+  box-sizing: border-box;
+  @media screen and (max-width: $breakpoint-mobile) {
+      font-size: 1.5rem;
+      padding: 0.5rem;
+  }
 }
 
 .word {
   overflow: hidden;
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: $font-color;
   margin-top: 2rem;
   &__left {
@@ -65,6 +99,8 @@ input {
     text-align: left;
   }
 }
+
+
 
 
 /**** Corner ribbon ***********************************************************/
